[package]
name = "ogl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
glium = "0.32.1"
image = "0.24.6"
rand = "0.8.5"
tobj = {version = "3.2.4", features = ["log", "merging", "reordering"]}

[features]
log = []
